Fix curved backgrounds too short

--- a/assets/stylesheets/components/_curved-section.scss
+++ b/assets/stylesheets/components/_curved-section.scss
@@ -17,7 +17,7 @@
 	background-image: image('curved-mask__top.svg'),
 	image('curved-mask__bottom.svg');
 	background-position: 50% -1%,
-	50% 101%,
+	50% 104%,
 
 	calc(50vw + 300px) 85%,
 	calc(50vw + 350px) 25%,
@@ -26,8 +26,8 @@
 	calc(50vw - 300px - 54px) 15%,
 	calc(50vw - 350px - 36px) 75%,
 	calc(50vw - 450px - 36px) 45%;
-	background-size: 101% auto,
-	101% auto,
+	background-size: 104% auto,
+	104% auto,
 
 	54px auto,
 	36px auto,
