--- a/assets/stylesheets/pages/_details.scss
+++ b/assets/stylesheets/pages/_details.scss
@@ -22,8 +22,8 @@
 	overflow: hidden;
 
 	background-image: image('bg-wave--4.svg');
-	background-position: 50% 101%;
-	background-size: 101% auto;
+	background-position: 50% 104%;
+	background-size: 104% auto;
 	background-color: $_blue--opacity;
 
 	&::before {
